# aws-nitro-enclaves-sdk-c

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1
.github/workflows/: docker-run-tests.yml
cmake/: aws-nitro-enclaves-sdk-c-config.cmake
cmake/modules/: FindLibJsonC.cmake
containers/: Dockerfile.al2  Dockerfile.alpine  Dockerfile.arm64v8.al2
docs/: kmstool.md
docs/kms-apis/: Decrypt.md  GenerateDataKey.md  GenerateRandom.md  RecipientRequest.md  kms-apis.md
include/aws/nitro_enclaves/: attestation.h  exports.h  kms.h  nitro_enclaves.h  rest.h
include/aws/nitro_enclaves/internal/: cms.h
include/aws/vsock/: VirtioVsock.h
lib/kmstool-enclave-lib/: CMakeLists.txt  build.sh  kmstool_enclave_lib.c  kmstool_enclave_lib.h
lib/kmstool-enclave-lib-test/: CMakeLists.txt  build.sh  main.c
lib/kmstool-enclave-lib/include/: kmstool_decrypt.h  kmstool_encrypt.h  kmstool_init.h  kmstool_type.h  kmstool_utils.h
lib/kmstool-enclave-lib/source/: kmstool_decrypt.c  kmstool_encryp.c  kmstool_encrypt.c  kmstool_init.c  kmstool_utils.c
samples/vsock_sample/: Cargo.toml  README.md
samples/vsock_sample/src/: command_parser.rs  lib.rs  main.rs  protocol_helpers.rs  utils.rs
source/: attestation.c  cms.c  kms.c  nitro_enclaves.c  rest.c
tests/: CMakeLists.txt  cms_test.c  kms_test.c  test.c
tests/integration/: test_kms.sh
tests/kmstool-enclaves/: cms_test.c  kms_test.c  test.c
tests/kmstool-enclaves-cli/: README.md  test_cli.sh
tests/kmstool-enclaves-cli/test-enclave/: Dockerfile  test.sh
tests/kmstool-enclaves/integration/: test_kms.sh
